# qsynth

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGES.md  Dockerfile  README.md  SESSION_SUMMARY.md  formats.yaml  models.yaml  moneta.yaml  pyproject.toml  requirements.txt
qsynth/: __init__.py  __main__.py  cli.py  main.py  models.py  provider.py  repl.py
qsynth/experiments/: __init__.py  avro_experiment.py  base.py  cron_feed_experiment.py  csv_experiment.py  ermodel_experiment.py  llm_prompt_experiment.py  mermaid_experiment.py  meta_experiment.py  parquet_experiment.py  sql_experiment.py  write_experiment.py
qsynth/tests/: test_arguments.py  test_cli.py  test_cli_new_module.py  test_cli_yaml_files.py  test_experiment_registry.py  test_experiments.py  test_experiments_integration.py  test_generation.py  test_library_api.py  test_models.py  test_repl.py  test_writers.py
qsynth/writers/: __init__.py  avro_writer.py  base.py  csv_writer.py  ermodel_writer.py  llm_prompt_writer.py  mermaid_writer.py  meta_writer.py  parquet_writer.py  sql_writer.py
